En la tarjetas de la seccion mis trabajos se hizo lo siguiente: se agrego 3 mas, se cambio el color de fondo y se agrego relieve y bordes redondeados, se agrego 3 imagenes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
@@ -151,7 +151,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Salmones de Alaska</h5>
@@ -160,6 +160,48 @@
                             Obcaecati facere quibusdam sint id laborum magni velit ducimus
                             corporis facilis qui architecto dolor, accusamus eveniet
                             exercitationem fugit. Quod autem neque ducimus.
+                        </p>
+                        <button type="button" class="btn btn-outline-info">
+                            Ver más
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 py-2">
+                <div class="card shadow-lg rounded-lg bg-secondary text-white">
+                    <div class="image-top" style="background-image: url(assets/img/card-4.jpg)"></div>
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Mezze, tzatziki</h5>
+                        <p class="card-text">
+                            son algunos de los típicos platos griegos. Aunque ya se pueden encontrar en cualquier parte del mundo, no es lo mismo disfrutarlos en la antigua ciudad de Atenas o frente al Mar Adriático.
+                        </p>
+                        <button type="button" class="btn btn-outline-info">
+                            Ver más
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 py-2">
+                <div class="card shadow-lg rounded-lg bg-secondary text-white">
+                    <div class="image-top" style="background-image: url(assets/img/card-5.jpg)"></div>
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Sashimi</h5>
+                        <p class="card-text">
+                            La cocina mediterránea ofrece desde pescados y mariscos al mejor jamón crudo del mundo. Se pueden degustar en formato de tapas para poder probar de todo, acompañadas de las famosas cañas..
+                        </p>
+                        <button type="button" class="btn btn-outline-info">
+                            Ver más
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 py-2">
+                <div class="card shadow-lg rounded-lg bg-secondary text-white">
+                    <div class="image-top" style="background-image: url(assets/img/card-6.jpg)"></div>
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Tacos</h5>
+                        <p class="card-text">
+                            Tacos, un clásico de la gastronomía mexicana. Ceviche, tacos, burritos, enchiladas, guacamole, son algunos de los platos típicos para acompañar el tequila o mezcal.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
