--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top" style="--bs-bg-opacity: 75%;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="assets/img/logo.png" class="img-fluid" style="width: 100px; height: 60px;">
