se modifico la seccion acerca de mi

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link text-dark" href="#">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link text-dark" href="#">Trabajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link text-dark" href="#">Contacto</a>
                     </li>
 
                 </ul>
@@ -45,16 +45,14 @@
         </div>
     </nav>
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-dark text-end py-5 mt-0">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Transformando Ideas en Tecnología
                 </h1>
-                <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                <p class="my-5 fw-bold text-light">
+                    Innovamos en cada línea de código, transformando ideas en soluciones tecnológicas avanzadas para un futuro digital
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
@@ -71,40 +69,35 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Se considera una persona responsable con sus labores, le gusta la puntualidad, el trabajar en equipo, Está dispuesto a colaborar al máximo con la empresa para cumplir las metas.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
-                <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
+                <i class="fas fa-school fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Ultima Formacion</h3>
+                <p class="my-3"><b>Estudios Universitarios:</b> 
+                <p class="my-3">Fundacion Univeritaria San Jose</p>
+                <p class="my-3">Tecnolo en Seguridad y Salud en el trabajo</p>
+                <p class="my-3">Quinto Semestre</p>
+                <p class="my-3">Neiva - Huila</p>
+                <p class="my-3">2023 - Acutalmente</p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
-                <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
+                <i class="fas fa-briefcase fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Experiencia Laboral</h3>
+                <p class="my-3"><b>Cargo Y funciones:</b> 
+                    <p class="my-3">Auxiliar Técnico de Emergencias</p>
+                    <p class="my-3">Reportar emergencias a los respectivos supervisores de turnos de cada Municipio, Radicar documentación, realizar informes sobre novedades dentro del turnos</p>
+                    <p class="my-3"><b>Fecha Ingreso</b></p>
+                    <p class="my-3">14 Junio 2016 - Acutalmente Trabajando</p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <i class="far fa-thumbs-up fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Hobbies</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Me gusta la tecnologia, me gusta viajar, escuchar musica, me gusta los video juegos, me gusta disfrutar de la vida sanamente, me gusta mucho lo que estoy aprendiendo que es desarrollo web para mejorar en un futuro
                 </p>
             </div>
         </div>
@@ -256,8 +249,8 @@
 
 
 
-    <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+    <footer class="bg-success text-center text-light p-4">
+        <p class="mb-0">Jesus Zuñiga 2024. Todos los derechos reservados.</p>
     </footer>
 
 
