--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Acerca de mi</a>
+                        <a class="nav-link text-dark" href="#Acerca-de-mi">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Trabajos</a>
+                        <a class="nav-link text-dark" href="#Mis-Comidas">Mis Comidas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Contacto</a>
+                        <a class="nav-link text-dark" href="#Contacto">Contacto</a>
                     </li>
 
                 </ul>
@@ -45,9 +45,9 @@
         </div>
     </nav>
 
-    <header id="Hero-Section" class="text-dark text-end py-5 mt-0">
+    <header id="Hero-Section" class="text-dark py-5 mt-0">
         <div class="container">
-            <div class="ms-auto col-12 col-md-7 ">
+            <div class="ms-1 col-12 col-md-7 text-left">
                 <h1 class="display-1 fw-bold my-5">
                     Transformando Ideas en Tecnología
                 </h1>
@@ -55,8 +55,8 @@
                     Innovamos en cada línea de código, transformando ideas en soluciones tecnológicas avanzadas para un futuro digital
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <a href="#Acerca-de-mi" class="btn btn-lg btn-outline-info text-light me-4">Acerca<br>De Mi</a>
+                    <a href="#Contacto"  class="btn btn-lg btn-info text-light">Contacto</a>
                 </div>
             </div>
         </div>
@@ -104,9 +104,9 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-Comidas" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis Comidas Favoritas</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -115,10 +115,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Es conocido por ser una experiencia gastronómica única, caracterizada por la calidad de la carne y la forma tradicional de cocinarla. el asado se prepara generalmente al aire libre, usando parrillas o asadores
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -132,10 +129,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            son un término coloquial para las papas cultivadas en la región de la Patagonia, especialmente en el sur de Argentina. Estas papas se destacan por su sabor único y la calidad que obtienen debido al clima frío y las condiciones extremas de la región.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -149,10 +143,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Salmones de Alaska</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            es conocido por su alta calidad y sabor distintivo. Los salmones de esta región son apreciados por su frescura, textura firme y contenido nutricional. Alaska es famosa por sus salmónidos debido a sus aguas frías y limpias.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
