se modifico la seccion comidas agregando nuevas imagenes y el link a los botones de vermas

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                 <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Lechona tolimense</h5>
                         <p class="card-text">
-                            Es conocido por ser una experiencia gastronómica única, caracterizada por la calidad de la carne y la forma tradicional de cocinarla. el asado se prepara generalmente al aire libre, usando parrillas o asadores
+                            ¡Nada despierta mejor el sabor de las fiestas en familias que una buena lechona tolimense! La alegría de esta receta se siente desde sus ingredientes principales: arveja amarilla, carne de cerdo, arroz y condimentos como el azafrán y el comino. Además, se puede servir con natilla.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <a href="https://www.tusegurodeviaje.net/blog/comidas-de-la-patagonia-un-viaje-culinario-inolvidable/" target="_blank" type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -127,13 +127,13 @@
                 <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Tamal Huilense</h5>
                         <p class="card-text">
-                            son un término coloquial para las papas cultivadas en la región de la Patagonia, especialmente en el sur de Argentina. Estas papas se destacan por su sabor único y la calidad que obtienen debido al clima frío y las condiciones extremas de la región.
+                            Los tamales huilenses son un plato tradicional de Colombia, originario del departamento del Huila. Se trata de un tamal envuelto en hoja de plátano, que se rellena con carne de cerdo, pollo, arroz, arveja, zanahoria, huevo, pasas, manteca de cerdo y condimentos.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <a href="https://gastronomiadecolombia.com/tamales-huilenses/" target="_blank" type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -141,13 +141,13 @@
                 <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">bizcochos De Achiras Del Huila</h5>
                         <p class="card-text">
-                            es conocido por su alta calidad y sabor distintivo. Los salmones de esta región son apreciados por su frescura, textura firme y contenido nutricional. Alaska es famosa por sus salmónidos debido a sus aguas frías y limpias.
+                            El bizcocho de achira o simplemente achiras es un amasijo que se hace con el almidón de achira o sagú (Canna indica), que es una planta de origen sudamericano usada por los pueblos prehispánicos de Perú y Colombia, al cual se le agrega cuajada fresca, mantequilla y yemas de huevo.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <a href="https://www.senalmemoria.co/achiras-bizcochos-tradicion-huila" target="_blank" type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -155,13 +155,13 @@
                 <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-4.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Mezze, tzatziki</h5>
+                        <h5 class="card-title fw-bold">La Bandeja Paisa</h5>
                         <p class="card-text">
-                            son algunos de los típicos platos griegos. Aunque ya se pueden encontrar en cualquier parte del mundo, no es lo mismo disfrutarlos en la antigua ciudad de Atenas o frente al Mar Adriático.
+                            La bandeja paisa, el plato típico por excelencia de la región antioqueña y uno de los más famosos en la gastronomía colombiana, cuenta con alrededor de 2.000 calorías y su origen se remonta a la época de la colonización, en la que en esta región montañosa, el ¨envuelto antioqueño¨ era el alimento que daba a los arrieros, las porciones necesarias de carbohidratos para sus largas jornadas de trabajo.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <a href="https://www.directoalpaladar.com/recetas-de-carnes-y-aves/bandeja-paisa-receta-plato-combinado-bestial-excelencia-colombia" target="_blank" type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -169,13 +169,13 @@
                 <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-5.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Sashimi</h5>
+                        <h5 class="card-title fw-bold">Sancocho</h5>
                         <p class="card-text">
-                            La cocina mediterránea ofrece desde pescados y mariscos al mejor jamón crudo del mundo. Se pueden degustar en formato de tapas para poder probar de todo, acompañadas de las famosas cañas..
+                            El sancocho es una de las comidas típicas de Colombia más queridas. Esta abundante sopa se prepara con una mezcla de carnes como pollo, res, cerdo o pescado, cocidas a fuego lento en un caldo aromático junto con una variedad de tubérculos como yuca, plátano, papa y ñame.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <a href="https://www.mycolombianrecipes.com/es/sancocho-de-gallina-o-valluno/" target="_blank" type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -183,13 +183,13 @@
                 <div class="card shadow-lg rounded-lg bg-secondary text-white">
                     <div class="image-top" style="background-image: url(assets/img/card-6.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Tacos</h5>
+                        <h5 class="card-title fw-bold">Natilla</h5>
                         <p class="card-text">
-                            Tacos, un clásico de la gastronomía mexicana. Ceviche, tacos, burritos, enchiladas, guacamole, son algunos de los platos típicos para acompañar el tequila o mezcal.
+                            Similar en sabor al flan y a la crema catalana, pero de consistencia más firme, la natilla es el postre tradicional número 1 de Colombia. Se suele decorar con una pizca de canela espolvoreada por encima para terminar de darle su sabor característico. Es un postre típico en celebraciones y fiestas, especialmente durante la temporada navideña.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <a href="https://www.mycolombianrecipes.com/es/natilla-colombiana/" target="_blank" type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
