Se cambio el texto al formulario

--- a/index.html
+++ b/index.html
@@ -203,15 +203,9 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">¿Tienes alguna pregunta o necesitas más información? ¡Estoy aquí para ayudarte! Completa el formulario o envíame un correo y me pondré en contacto contigo a la brevedad.</p>
 
         <form>
-
-
             <div class="form-group mb-4">
                 <label class="mb-2">Nombre</label>
                 <input class="form-control" placeholder="Nombre">
